--- a/public/search.html
+++ b/public/search.html
@@ -36,12 +36,12 @@
             <br>
             <br>
             <br>
-            <span class="w3-medium">youtube is broken, sorry about that </span>
+            <span class="w3-medium">YouTube is still brokey </span>
             <div>
                 <input class="w3-xlarge" type='text' placeholder='discord.com/login' id='url-target' onkeydown='if(event.key==="Enter") go()'/>
             </div>
             <br>
-            <p class="w3-medium">Powered by Heroku - v1.6 - Securly kinda sucks :p</p>
+            <p class="w3-medium">Powered by Heroku - v1.7 - Securly kinda sucks :p</p>
         </div>
     </div>
 </body>
